feat: create function in projectController, add sidebar in partials

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,3 +3,10 @@
 .ms_date {
     width: 10%;
 }
+
+p {
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
