feat: show function in ProjectController.php and show.blade.php in views/admin/projects

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,9 +4,11 @@
     width: 10%;
 }
 
-p {
+td {
+   p {
     width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+} 
 }
